Revision history for Dist-Zilla-PluginBundle-Author-SKIRMESS

{{$NEXT}}

        - Added InstallGuide plugin and therefore an INSTALL file
        - Added CheckStrictVersion plugin
        - Added copyright_holder to dist.ini
        - Fixed a display issue in the POD
        - Added MetaConfig plugin
        - Added CheckIssues plugin
        - Added VerifyPhases plugin
        - Added Git::CheckFor::MergeConflicts plugin
        - Added CheckSelfDependency plugin
        - Plugins without arguments can be mentioned as scalar to add_plugins()
        - Removed FakeRelease plugin

0.001  2017-08-17 21:01:13 UTC

        - Initial release