@@ -120,6 +120,10 @@ x_Dist_Zilla:
       name: '@Author::SKIRMESS/Git::Check'
       version: '2.042'
     -
+      class: Dist::Zilla::Plugin::Git::Remote::Check
+      name: '@Author::SKIRMESS/Git::Remote::Check'
+      version: 0.1.2
+    -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Author::SKIRMESS/ManifestSkip'
       version: '6.009'
